# promptops

./: .env.docker.example  .env.example  .env.production  .gitignore  .releaserc  400_error_solution.md  ANALYTICS_README.md  CLIENT_API.md  COMPATIBILITY_MATRIX_README.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  README.md  agents.md  alembic.ini  anthropic_api_error_analysis.md  avatar_debug_test.html  check_avatar.py  check_db_users.py  claude copy.md  claude-say.sh  claude.md  create_workflow_tables_direct.py  database_management_guide.md  debug_dropdown.html  debug_report.md  dev.sh  docker-compose.clients.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  dump.rdb  enum-handling-prevention-guide.md  gemini.md  governance_implementation_plan.md  governance_implementation_summary.md  nginx.conf  package-lock.json  package.json  promptops_roadmap.md  (+31 more)
.claude/: claude.md  settings.json  settings.local.json  settings_backup.json
.claude/agents/: codebase-error-analyzer.md  coder.md  database-administrator.md  llm-ai-architect.md  senior-coder.md  ui-theme-designer.md
.github/workflows/: changelog.yml  comprehensive-testing.yml
.kilocode/: mcp.json
alembic_backup/: env.py
alembic_backup/versions/: 0400fbf655ca_add_missing_columns_to_prompts_table.py  31b3c3054a91_add_promptops_v1_models_fixed.py  43eefcc5fa83_add_api_key_and_secret_key_fields_to_.py  5012a6b7d143_initial_migration.py  (+4 more)
app/: __init__.py  analytics_models.py  analytics_scheduler.py  analytics_service.py  auth.py  client_auth.py  composition.py  config.py  main.py  middleware.py  models.py  performance_monitor.py  schemas.py  security_middleware.py  setup_analytics.py  utils.py
docs/: README.md
examples/: template.yaml
monitoring/: prometheus.yml
nginx/: nginx.conf
promptops-client/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
promptops-client-npm/: .dockerignore  .eslintrc.js  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
promptops-client/.github/workflows/: python-ci.yml
promptops-client/docs/: PERFORMANCE_MONITORING.md
promptops-client/examples/: advanced_usage.py  basic_usage.py  context_manager.py  performance_monitoring_example.py
promptops-client/promptops/: __init__.py  auth.py  cache.py  cli.py  client.py  environment.py  exceptions.py  models.py  prompts.py  telemetry.py
promptops-client/promptops/ab_testing/: __init__.py  manager.py  models.py
promptops-client/promptops/performance/: __init__.py  adaptive_retry.py  connection_pool.py  dashboard.py  models.py  monitor.py  opentelemetry.py  smart_cache.py
promptops-client/promptops/tests/: __init__.py  test_auth.py  test_cache.py  test_client.py
promptops-client/tests/: test_performance_monitoring.py
promptops-client/tests/integration/: test_api_integration.py
promptops-client/tests/load/: locustfile.py
promptops-client/tests/performance/: test_benchmarks.py
scripts/: check_admin_role.py  check_editor_role.py  docker-build.sh  docker-deploy.sh  fix_user_roles.py  simple_fix_role.py
templates/: analytics_dashboard.html
tests/: test_analytics.py
web/: .env.backend  .env.example  .env.local  ARCHITECTURE.md  GOOGLE_OAUTH_SETUP.md  README.md  index.html  mock_oauth_server.py  package-lock.json  package.json  setup.sh  tailwind.config.js  test-app.js  tsconfig.json  vite-spa-fallback.js  vite.config.ts
(+195 files in other folders)
